--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body{
     margin: 0;
     padding: 0;
-    background-image: url("https://images.rawpixel.com/image_1000/czNmcy1wcml2YXRlL3Jhd3BpeGVsX2ltYWdlcy93ZWJzaXRlX2NvbnRlbnQvbHIvam9iNTYyLW51bm9vbi0xMC1rbDYyM3NsOC5qcGc.jpg");
+    background-image: url("./dog.jpg");
     background-repeat:no-repeat;
     background-attachment: fixed;
     background-size: cover;
